adding things about me

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Freelancer - Start Bootstrap Theme</title>
+    <title>Juan Felipe Jimenez Pacheco - Software Developer</title>
     <!-- Font Awesome icons (free version)-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" crossorigin="anonymous"></script>
     <!-- Core theme CSS (includes Bootstrap)-->
@@ -14,6 +14,7 @@
     <!-- Fonts CSS-->
     <link rel="stylesheet" href="css/heading.css">
     <link rel="stylesheet" href="css/body.css">
+    <link rel="icon" href="assets/img/avataaars.svg">
 </head>
 
 <body id="page-top">
@@ -37,7 +38,7 @@
         <div class="container d-flex align-items-center flex-column">
             <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="">
             <!-- Masthead Heading-->
-            <h1 class="masthead-heading mb-0">START BOOTSTRAP</h1>
+            <h1 class="masthead-heading mb-0">JUAN FELIPE JIMENEZ PACHECO</h1>
             <!-- Icon Divider-->
             <div class="divider-custom divider-light">
                 <div class="divider-custom-line"></div>
@@ -45,7 +46,7 @@
                 <div class="divider-custom-line"></div>
             </div>
             <!-- Masthead Subheading-->
-            <p class="pre-wrap masthead-subheading font-weight-light mb-0">Graphic Artist - Web Designer - Illustrator</p>
+            <p class="pre-wrap masthead-subheading font-weight-light mb-0"> 👨‍💻 Software Developer 👨‍💻</p>
         </div>
     </header>
     <section class="page-section about" id="about">
@@ -62,12 +63,14 @@
             </div>
             <!-- About Section Content-->
             <div class="row">
-                <div class="col-lg-4 ml-auto">
-                    <p class="pre-wrap lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
+                <div class="col-lg-auto ml-auto text-justify">
+                    <p class="lead">
+                        Hi, I am a student of software engineer focused on Web Development and backend (Java). I like all topics about technology and future. I have participated at hotbed of programming marathons and events that university offer. <br><br>                        Furthermore, I participate and actively contribute to each stage of the construction of a software, offering a good user experience. Every day I improve in my programming skills and I learn new technologies that can be implemented
+                        to create high impact projects, I hope to become in a big product manager or an architect of software. I work with great goals that can revolutionize the world oriented to get excellent results, accompanied by a hard work in teams,
+                        interpersonal relationships and extensive experience to offer a service.
+                    </p>
                 </div>
-                <div class="col-lg-4 mr-auto">
-                    <p class="pre-wrap lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
-                </div>
+
             </div>
         </div>
     </section>
