--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
             <button class="navbar-toggler navbar-toggler-right font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">Menu <i class="fas fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">ABOUT</a>
-                    </li>
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">PORTFOLIO</a>
-                    </li>
-
-                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">CONTACT</a>
-                    </li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">ABOUT</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#academic-experience">ACADEMIC EXPERIENCE</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#work-experience">WORK EXPERIENCE</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">PORTFOLIO</a></li>
+                    <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">CONTACT</a></li>
                 </ul>
             </div>
         </div>
     </nav>
+
+
     <header class="masthead bg-primary text-white text-center">
         <div class="container d-flex align-items-center flex-column">
             <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="">
@@ -49,11 +49,13 @@
             <p class="pre-wrap masthead-subheading font-weight-light mb-0"> 👨‍💻 Software Developer 👨‍💻</p>
         </div>
     </header>
-    <section class="page-section about" id="about">
+
+
+    <section class="page-section about text-white " id="about">
         <div class="container">
             <!-- About Section Heading-->
             <div class="text-center">
-                <h2 class="page-section-heading d-inline-block text-white">ABOUT</h2>
+                <h2 class="page-section-heading d-inline-block">ABOUT</h2>
             </div>
             <!-- Icon Divider-->
             <div class="divider-custom divider-light">
@@ -66,14 +68,68 @@
                 <div class="col-lg-auto ml-auto text-justify">
                     <p class="lead">
                         Hi, I am a student of software engineer focused on Web Development and backend (Java). I like all topics about technology and future. I have participated at hotbed of programming marathons and events that university offer. <br><br>                        Furthermore, I participate and actively contribute to each stage of the construction of a software, offering a good user experience. Every day I improve in my programming skills and I learn new technologies that can be implemented
-                        to create high impact projects, I hope to become in a big product manager or an architect of software. I work with great goals that can revolutionize the world oriented to get excellent results, accompanied by a hard work in teams,
-                        interpersonal relationships and extensive experience to offer a service.
+                        to create high impact projects, I hope to become in a big product manager or an architect of software. <br><br> I work with great goals that can revolutionize the world oriented to get excellent results, accompanied by a hard work
+                        in t teams, interpersonal relationships and extensive experience to offer a service.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="page-section bg-primary text-white mb-0 text-white " id="academic-experience">
+        <div class="container">
+            <!-- Portfolio Section Heading-->
+            <div class="text-center">
+                <h2 class="page-section-heading text-secondary mb-0 d-inline-block">ACADEMIC EXPERIENCE</h2>
+            </div>
+            <!-- Icon Divider-->
+            <div class="divider-custom">
+                <div class="divider-custom-line"></div>
+                <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                <div class="divider-custom-line"></div>
+            </div>
+
+            <!-- About Section Content-->
+            <div class="row">
+                <div class="jumbotron">
+                    <h1 class="display-4">Hello, world!</h1>
+                    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+                    <hr class="my-4">
+                    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <section class="page-section about text-white " id="work-experience">
+        <div class="container">
+            <!-- About Section Heading-->
+            <div class="text-center">
+                <h2 class="page-section-heading d-inline-block text-white">WORK EXPERIENCE</h2>
+            </div>
+            <!-- Icon Divider-->
+            <div class="divider-custom divider-light">
+                <div class="divider-custom-line"></div>
+                <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                <div class="divider-custom-line"></div>
+            </div>
+            <!-- About Section Content-->
+            <div class="row">
+                <div class="col-lg-auto ml-auto text-justify">
+                    <p class="lead">
+                        Hi, I am a student of software engineer focused on Web Development and backend (Java). I like all topics about technology and future. I have participated at hotbed of programming marathons and events that university offer. <br><br>                        Furthermore, I participate and actively contribute to each stage of the construction of a software, offering a good user experience. Every day I improve in my programming skills and I learn new technologies that can be implemented
+                        to create high impact projects, I hope to become in a big product manager or an architect of software. <br><br> I work with great goals that can revolutionize the world oriented to get excellent results, accompanied by a hard work
+                        in t teams, interpersonal relationships and extensive experience to offer a service.
                     </p>
                 </div>
 
             </div>
         </div>
     </section>
+
+
     <!-- Portfolio Modal-->
     <div class="portfolio-modal modal fade" id="portfolioModal0" tabindex="-1" role="dialog" aria-labelledby="#portfolioModal0Label" aria-hidden="true">
         <div class="modal-dialog modal-xl" role="document">
@@ -103,6 +159,7 @@
             </div>
         </div>
     </div>
+
     <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-labelledby="#portfolioModal1Label" aria-hidden="true">
         <div class="modal-dialog modal-xl" role="document">
             <div class="modal-content">
@@ -131,6 +188,7 @@
             </div>
         </div>
     </div>
+
     <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog" aria-labelledby="#portfolioModal2Label" aria-hidden="true">
         <div class="modal-dialog modal-xl" role="document">
             <div class="modal-content">
@@ -159,6 +217,7 @@
             </div>
         </div>
     </div>
+
     <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog" aria-labelledby="#portfolioModal3Label" aria-hidden="true">
         <div class="modal-dialog modal-xl" role="document">
             <div class="modal-content">
@@ -187,6 +246,7 @@
             </div>
         </div>
     </div>
+
     <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-labelledby="#portfolioModal4Label" aria-hidden="true">
         <div class="modal-dialog modal-xl" role="document">
             <div class="modal-content">
@@ -215,6 +275,7 @@
             </div>
         </div>
     </div>
+
     <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-labelledby="#portfolioModal5Label" aria-hidden="true">
         <div class="modal-dialog modal-xl" role="document">
             <div class="modal-content">
@@ -243,6 +304,8 @@
             </div>
         </div>
     </div>
+
+
     <section class="page-section bg-primary text-white mb-0" id="portfolio">
         <div class="container">
             <!-- Portfolio Section Heading-->
@@ -302,13 +365,14 @@
                 </div>
             </div>
         </div>
-
     </section>
-    <section class="page-section" id="contact">
+
+
+    <section class="page-section text-white " id="contact">
         <div class="container">
             <!-- Contact Section Heading-->
             <div class="text-center">
-                <h2 class="page-section-heading text-secondary d-inline-block mb-0">CONTACT</h2>
+                <h2 class="page-section-heading text-secondary d-inline-block mb-0 ">CONTACT</h2>
             </div>
             <!-- Icon Divider-->
             <div class="divider-custom">
@@ -322,13 +386,13 @@
                     <div class="d-flex flex-column align-items-center">
                         <div class="icon-contact mb-3"><i class="fas fa-mobile-alt"></i></div>
                         <div class="text-muted">Phone</div>
-                        <div class="lead font-weight-bold">(555) 555-5555</div>
+                        <div class="lead font-weight-bold">(+57) 3194742855</div>
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="d-flex flex-column align-items-center">
                         <div class="icon-contact mb-3"><i class="far fa-envelope"></i></div>
-                        <div class="text-muted">Email</div><a class="lead font-weight-bold" href="mailto:name@example.com">name@example.com</a>
+                        <div class="text-muted">Email</div><a class="lead font-weight-bold" href="pipesjimenez6@gmail.com">pipesjimenez6@gmail.com</a>
                     </div>
                 </div>
             </div>
@@ -340,13 +404,15 @@
                 <!-- Footer Location-->
                 <div class="col-lg-4 mb-5 mb-lg-0">
                     <h4 class="mb-4">LOCATION</h4>
-                    <p class="pre-wrap lead mb-0">2215 John Daniel Drive Clark, MO 65243</p>
+                    <p class="pre-wrap lead mb-0">Colombia &#x1F1E8;&#x1F1F4; <br> Bogota D.C</p>
                 </div>
                 <!-- Footer Social Icons-->
                 <div class="col-lg-4 mb-5 mb-lg-0">
-                    <h4 class="mb-4">AROUND THE WEB</h4><a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com/StartBootstrap"><i class="fab fa-fw fa-facebook-f"></i></a>
-                    <a class="btn btn-outline-light btn-social mx-1" href="https://www.twitter.com/sbootstrap"><i class="fab fa-fw fa-twitter"></i></a>
-                    <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/startbootstrap"><i class="fab fa-fw fa-linkedin-in"></i></a>
+                    <h4 class="mb-4">Social Networks</h4>
+                    <a class="btn btn-outline-light btn-social mx-1" href="https://www.youtube.com/channel/UChvZwgRAnJZ6MzdgPUTtWSg/videos"><i class="fab fa-youtube"></i></a>
+                    <a class="btn btn-outline-light btn-social mx-1" href="https://stackoverflow.com/users/13682076/juan-felipe-jimenez-pacheco"><i class="fab fa-stack-overflow" aria-hidden="true"></i></a>
+                    <a class="btn btn-outline-light btn-social mx-1" href="https://github.com/JuanfelipeX"><i class="fab fa-fw fa-github"></i></a>
+                    <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/juan-felipe-jimenez-pacheco-92293a1a6/"><i class="fab fa-fw fa-linkedin-in"></i></a>
                     <a class="btn btn-outline-light btn-social mx-1" href="https://www.dribble.com/startbootstrap"><i class="fab fa-fw fa-dribbble"></i></a>
                 </div>
                 <!-- Footer About Text-->
