agregando cositas de expereciencia academica

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                     <div class="card card-academic">
                         <img class="card-img-top card-academic-img" src="https://www.idc-latinamerica.com/sites/default/files/2021-07/Konrad_Lorenz%20Logo.png " alt="Card image cap ">
                         <div class="card-body ">
-                            <h5 class="card-title ">High School - San Felipe Neri</h5>
-                            <p class="card-text ">Enero 2008 - Diciembre 2022.</p>
+                            <h5 class="card-title ">College (Software Engineer)- Fundacion Universitaria Konrad Lorenz</h5>
+                            <p class="card-text ">January 2019 - December 2023.</p>
                         </div>
                     </div>
                 </div>
@@ -106,8 +106,8 @@
                     <div class="card card-academic">
                         <img class="card-img-top card-academic-img" src="https://avatars.githubusercontent.com/u/2975064?s=280&v=4" alt="Card image cap ">
                         <div class="card-body ">
-                            <h5 class="card-title ">virtual education - Platzi </h5>
-                            <p class="card-text ">Enero 2008 - Diciembre 2022.</p>
+                            <h5 class="card-title ">Virtual Education - Platzi </h5>
+                            <p class="card-text ">January 2021 - Present.</p>
                         </div>
                     </div>
                 </div>
@@ -117,11 +117,268 @@
                             alt="Card image cap ">
                         <div class="card-body ">
                             <h5 class="card-title ">High School San Felipe Neri</h5>
-                            <p class="card-text ">Enero 2008 - Diciembre 2022.</p>
+                            <p class="card-text ">January 2008 - December 2019.</p>
                         </div>
                     </div>
                 </div>
             </div>
+
+            <div class="text-center">
+                <h2 class="page-section-heading text-secondary mb-0 d-inline-block">Technologies</h2>
+            </div>
+            <!-- Icon Divider-->
+            <div class="divider-custom">
+                <div class="divider-custom-line"></div>
+                <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                <div class="divider-custom-line"></div>
+            </div>
+
+            <div id="accordion">
+                <div class="card accordion-container">
+                    <div class="card-header" id="headingOne">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">Collapsible Group Item #1</button>
+                        </h5>
+                    </div>
+
+                    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+                        <div class="card-body">
+                            <div class="text-left">
+                                <h2 class="page-section-heading text-secondary mb-0 d-inline-block">Backend</h2>
+                            </div>
+
+                            <!-- About Section Content-->
+                            <div class="row justify-content-center tecnologies">
+
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-sm">
+                                            <img class="card-img-top card-tecnologies-img" src="https://www.svgrepo.com/show/303388/java-4-logo.svg" alt="Card image cap">
+                                        </div>
+                                        <div class="col-sm">
+                                            <img class="card-img-top card-tecnologies-img" src="https://www.svgrepo.com/show/303208/php-1-logo.svg" alt="Card image cap">
+                                        </div>
+                                        <div class="col-sm">
+                                            <img class="card-img-top card-tecnologies-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/1024px-Python-logo-notext.svg.png" alt="Card image cap">
+                                        </div>
+                                        <div class="col-sm">
+                                            <img class="card-img-top card-tecnologies-img" src="https://seeklogo.com/images/C/c-sharp-c-logo-02F17714BA-seeklogo.com.png" alt="Card image cap">
+                                        </div>
+                                        <div class="col-sm">
+                                            <img class="card-img-top card-tecnologies-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/R_logo.svg/1280px-R_logo.svg.png" alt="Card image cap">
+                                        </div>
+                                        <div class="col-sm">
+                                            <img class="card-img-top card-tecnologies-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/ba/Javascript_badge.svg/710px-Javascript_badge.svg.png" alt="Card image cap">
+                                        </div>
+                                        <div class="col-sm">
+                                            <img class="card-img-top card-tecnologies-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/18/ISO_C%2B%2B_Logo.svg/1822px-ISO_C%2B%2B_Logo.svg.png" alt="Card image cap">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card accordion-container">
+                    <div class="card-header" id="headingTwo">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Collapsible Group Item #2</button>
+                        </h5>
+                    </div>
+                    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+                        <div class="card-body">
+                            <div class="text-left">
+                                <h2 class="page-section-heading text-secondary mb-0 d-inline-block">Frontend</h2>
+                            </div>
+
+                            <!-- About Section Content-->
+                            <div class="row justify-content-center tecnologies">
+
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-sm">
+                                            <img class="card-img-top card-tecnologies-img" src="" alt="Card image cap">
+                                        </div>
+                                        <div class="col-sm">
+                                            <img class="card-img-top card-tecnologies-img" src="" alt="Card image cap">
+                                        </div>
+                                        <div class="col-sm">
+                                            <img class="card-img-top card-tecnologies-img" src="" alt="Card image cap">
+                                        </div>
+                                        <div class="col-sm">
+                                            <img class="card-img-top card-tecnologies-img" src="" alt="Card image cap">
+                                        </div>
+                                        <div class="col-sm">
+                                            <img class="card-img-top card-tecnologies-img" src="" alt="Card image cap">
+                                        </div>
+                                        <div class="col-sm">
+                                            <img class="card-img-top card-tecnologies-img" src="" alt="Card image cap">
+                                        </div>
+                                        <div class="col-sm">
+                                            <img class="card-img-top card-tecnologies-img" src="" alt="Card image cap">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="card accordion-container">
+                    <div class="card-header" id="headingThree">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Collapsible Group Item #3</button>
+                        </h5>
+                    </div>
+                    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+                        <div class="card-body">
+
+                            <div class="text-left">
+                                <h2 class="page-section-heading text-secondary mb-0 d-inline-block">Frameworks</h2>
+                            </div>
+
+                            <!-- About Section Content-->
+                            <div class="row justify-content-center tecnologies">
+
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-sm">
+                                            <img class="card-img-top card-tecnologies-img" src="" alt="Card image cap">
+                                        </div>
+                                        <div class="col-sm">
+                                            <img class="card-img-top card-tecnologies-img" src="" alt="Card image cap">
+                                        </div>
+                                        <div class="col-sm">
+                                            <img class="card-img-top card-tecnologies-img" src="" alt="Card image cap">
+                                        </div>
+                                        <div class="col-sm">
+                                            <img class="card-img-top card-tecnologies-img" src="" alt="Card image cap">
+                                        </div>
+                                        <div class="col-sm">
+                                            <img class="card-img-top card-tecnologies-img" src="" alt="Card image cap">
+                                        </div>
+                                        <div class="col-sm">
+                                            <img class="card-img-top card-tecnologies-img" src="" alt="Card image cap">
+                                        </div>
+                                        <div class="col-sm">
+                                            <img class="card-img-top card-tecnologies-img" src="" alt="Card image cap">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card accordion-container">
+                    <div class="card-header" id="headingThree">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Collapsible Group Item #3</button>
+                        </h5>
+                    </div>
+                    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+                        <div class="card-body">
+
+                            <div class="text-left">
+                                <h2 class="page-section-heading text-secondary mb-0 d-inline-block">Databases</h2>
+                            </div>
+
+                            <!-- About Section Content-->
+                            <div class="row justify-content-center tecnologies">
+
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-sm">
+                                            <img class="card-img-top card-tecnologies-img" src="" alt="Card image cap">
+                                        </div>
+                                        <div class="col-sm">
+                                            <img class="card-img-top card-tecnologies-img" src="" alt="Card image cap">
+                                        </div>
+                                        <div class="col-sm">
+                                            <img class="card-img-top card-tecnologies-img" src="" alt="Card image cap">
+                                        </div>
+                                        <div class="col-sm">
+                                            <img class="card-img-top card-tecnologies-img" src="" alt="Card image cap">
+                                        </div>
+                                        <div class="col-sm">
+                                            <img class="card-img-top card-tecnologies-img" src="" alt="Card image cap">
+                                        </div>
+                                        <div class="col-sm">
+                                            <img class="card-img-top card-tecnologies-img" src="" alt="Card image cap">
+                                        </div>
+                                        <div class="col-sm">
+                                            <img class="card-img-top card-tecnologies-img" src="" alt="Card image cap">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card accordion-container">
+                    <div class="card-header" id="headingThree">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Collapsible Group Item #3</button>
+                        </h5>
+                    </div>
+                    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+                        <div class="card-body">
+
+                            <div class="text-left">
+                                <h2 class="page-section-heading text-secondary mb-0 d-inline-block">Other Technologies</h2>
+                            </div>
+
+                            <!-- About Section Content-->
+                            <div class="row justify-content-center tecnologies">
+
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-sm">
+                                            <img class="card-img-top card-tecnologies-img" src="" alt="Card image cap">
+                                        </div>
+                                        <div class="col-sm">
+                                            <img class="card-img-top card-tecnologies-img" src="" alt="Card image cap">
+                                        </div>
+                                        <div class="col-sm">
+                                            <img class="card-img-top card-tecnologies-img" src="" alt="Card image cap">
+                                        </div>
+                                        <div class="col-sm">
+                                            <img class="card-img-top card-tecnologies-img" src="" alt="Card image cap">
+                                        </div>
+                                        <div class="col-sm">
+                                            <img class="card-img-top card-tecnologies-img" src="" alt="Card image cap">
+                                        </div>
+                                        <div class="col-sm">
+                                            <img class="card-img-top card-tecnologies-img" src="" alt="Card image cap">
+                                        </div>
+                                        <div class="col-sm">
+                                            <img class="card-img-top card-tecnologies-img" src="" alt="Card image cap">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card accordion-container">
+                    <div class="card-header" id="headingThree">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">Collapsible Group Item #3</button>
+                        </h5>
+                    </div>
+                    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+                        <div class="card-body">
+                            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird
+                            on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft
+                            beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </section>
 
