--- a/index.html
+++ b/index.html
@@ -159,28 +159,53 @@
                             </div>
 
                             <!-- Academic Experience Accordion Backend Lenguages Content -->
-                            <div class="row justify-content-center tecnologies">
-                                <div class="container">
-                                    <div class="row">
-                                        <div class="col-sm">
+                            <div class="row justify-content-center">
+                                <!-- Portfolio Items-->
+                                <div class="col-md-2 col-lg-2 mb-2">
+                                    <div class="portfolio-item mx-auto">
+                                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                             <i class="fab fa-java tecnologies-icons"></i>
                                         </div>
-                                        <div class="col-sm">
+                                    </div>
+                                </div>
+                                <div class="col-md-2 col-lg-2 mb-2">
+                                    <div class="portfolio-item mx-auto">
+                                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                             <i class="fab fa-python tecnologies-icons"></i>
                                         </div>
-                                        <div class="col-sm">
+                                    </div>
+                                </div>
+                                <div class="col-md-2 col-lg-2 mb-2">
+                                    <div class="portfolio-item mx-auto">
+                                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                             <i class="fab fa-js tecnologies-icons"></i>
                                         </div>
-                                        <div class="col-sm">
+                                    </div>
+                                </div>
+                                <div class="col-md-2 col-lg-2 mb-2">
+                                    <div class="portfolio-item mx-auto">
+                                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                             <i class="fab fa-php tecnologies-icons"></i>
                                         </div>
-                                        <div class="col-sm">
+                                    </div>
+                                </div>
+                                <div class="col-md-2 col-lg-2 mb-2">
+                                    <div class="portfolio-item mx-auto">
+                                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                             <i class='bx bxl-c-plus-plus tecnologies-icons'></i>
                                         </div>
-                                        <div class="col-sm">
-                                            <img class="card-img-top card-tecnologies-img tecnologies-icons" src="/assets/img/C-logo-320x320px.png" alt="C# Logo">
+                                    </div>
+                                </div>
+                                <div class="col-md-2 col-lg-2 mb-2">
+                                    <div class="portfolio-item mx-auto">
+                                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                            <img class="card-img-top card-tecnologies-img tecnologies-icons" src="/assets/img/c.svg" alt="C# Logo">
                                         </div>
-                                        <div class="col-sm">
+                                    </div>
+                                </div>
+                                <div class="col-md-2 col-lg-2 mb-2">
+                                    <div class="portfolio-item mx-auto">
+                                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                             <i class="fab fa-r-project tecnologies-icons"></i>
                                         </div>
                                     </div>
@@ -197,25 +222,26 @@
                             </div>
 
                             <!-- Academic Experience Accordion Frameworks Lenguages Content -->
-                            <div class="row justify-content-center tecnologies">
-                                <div class="container">
-                                    <div class="row">
-                                        <div class="col-sm">
+                            <div class="row justify-content-center">
+                                <!-- Portfolio Items-->
+                                <div class="col-md-2 col-lg-2 mb-2">
+                                    <div class="portfolio-item mx-auto">
+                                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                             <i class='bx bxl-spring-boot tecnologies-icons'></i>
                                         </div>
-                                        <div class="col-sm">
-                                            <img class="card-img-top card-tecnologies-img" src="https://assets.website-files.com/61ca3f775a79ec5f87fcf937/6202fcdee5ee8636a145a41b_1234.png" alt="Express Logo">
+                                    </div>
+                                </div>
+                                <div class="col-md-2 col-lg-2 mb-2">
+                                    <div class="portfolio-item mx-auto">
+                                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                            <i class='bx bxl-nodejs tecnologies-icons'></i>
                                         </div>
-                                        <div class="col-sm">
-                                            <img class="card-img-top card-tecnologies-img" src="https://www.svgrepo.com/show/303360/nodejs-logo.svg" alt="Node.JS Logo">
-                                        </div>
-                                        <div class="col-sm">
-                                        </div>
-                                        <div class="col-sm">
-                                        </div>
-                                        <div class="col-sm">
-                                        </div>
-                                        <div class="col-sm">
+                                    </div>
+                                </div>
+                                <div class="col-md-2 col-lg-2 mb-2">
+                                    <div class="portfolio-item mx-auto">
+                                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                            <i class="tecnologies-icons2">EXPRESS</i>
                                         </div>
                                     </div>
                                 </div>
@@ -240,27 +266,33 @@
                             </div>
 
                             <!-- Academic Experience Accordion Fronted Content -->
-                            <div class="row justify-content-center tecnologies">
-                                <div class="container">
-                                    <div class="row">
-                                        <div class="col-sm">
-                                            <img class="card-img-top card-tecnologies-img" src="https://static.cdnlogo.com/logos/h/84/html.svg" alt="HTML Logo">
+                            <div class="row justify-content-center">
+                                <!-- Portfolio Items-->
+                                <div class="col-md-2 col-lg-2 mb-2">
+                                    <div class="portfolio-item mx-auto">
+                                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                            <i class='bx bxl-html5 tecnologies-icons'></i>
                                         </div>
-                                        <div class="col-sm">
-                                            <img class="card-img-top card-tecnologies-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/62/CSS3_logo.svg/240px-CSS3_logo.svg.png" alt="CSS Logo">
+                                    </div>
+                                </div>
+                                <div class="col-md-2 col-lg-2 mb-2">
+                                    <div class="portfolio-item mx-auto">
+                                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                            <i class='bx bxl-css3 tecnologies-icons'></i>
                                         </div>
-                                        <div class="col-sm">
-                                            <img class="card-img-top card-tecnologies-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Bootstrap_logo.svg/2560px-Bootstrap_logo.svg.png" alt="Angular Logo">
+                                    </div>
+                                </div>
+                                <div class="col-md-2 col-lg-2 mb-2">
+                                    <div class="portfolio-item mx-auto">
+                                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                            <i class='bx bxl-bootstrap tecnologies-icons'></i>
                                         </div>
-                                        <div class="col-sm">
-                                            <img class="card-img-top card-tecnologies-img" src="https://th.bing.com/th/id/R.45a3201a36a81b4cca071ebdd6d03432?rik=wYHiqdqrm6M8jA&pid=ImgRaw&r=0" alt="TypeScript Logo">
-                                        </div>
-                                        <div class="col-sm">
-                                            <img class="card-img-top card-tecnologies-img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cf/Angular_full_color_logo.svg/240px-Angular_full_color_logo.svg.png" alt="Angular Logo">
-                                        </div>
-                                        <div class="col-sm">
-                                        </div>
-                                        <div class="col-sm">
+                                    </div>
+                                </div>
+                                <div class="col-md-2 col-lg-2 mb-2">
+                                    <div class="portfolio-item mx-auto">
+                                        <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                                            <i class='bx bxl-angular tecnologies-icons'></i>
                                         </div>
                                     </div>
                                 </div>
@@ -285,30 +317,25 @@
                             </div>
 
                             <!-- Academic Experience Accordion Database Content -->
-                            <div class="row justify-content-center tecnologies">
-                                <div class="container">
-                                    <div class="row">
-                                        <div class="col-sm">
-                                            <img class="card-img-top card-tecnologies-img" src="" alt="Card image cap">
-                                        </div>
-                                        <div class="col-sm">
-                                            <img class="card-img-top card-tecnologies-img" src="" alt="Card image cap">
-                                        </div>
-                                        <div class="col-sm">
-                                            <img class="card-img-top card-tecnologies-img" src="" alt="Card image cap">
-                                        </div>
-                                        <div class="col-sm">
-                                            <img class="card-img-top card-tecnologies-img" src="" alt="Card image cap">
-                                        </div>
-                                        <div class="col-sm">
-                                            <img class="card-img-top card-tecnologies-img" src="" alt="Card image cap">
-                                        </div>
-                                        <div class="col-sm">
-                                            <img class="card-img-top card-tecnologies-img" src="" alt="Card image cap">
-                                        </div>
-                                        <div class="col-sm">
-                                            <img class="card-img-top card-tecnologies-img" src="" alt="Card image cap">
-                                        </div>
+                            <div class="container">
+                                <div class="row">
+                                    <div class="col-sm">
+                                        <i class="fab fa-java tecnologies-icons"></i>
+                                    </div>
+                                    <div class="col-sm">
+                                        <i class="fab fa-java tecnologies-icons"></i>
+                                    </div>
+                                    <div class="col-sm">
+                                        <i class="fab fa-java tecnologies-icons"></i>
+                                    </div>
+                                    <div class="col-sm">
+                                        <i class="fab fa-java tecnologies-icons"></i>
+                                    </div>
+                                    <div class="col-sm">
+                                        <i class="fab fa-java tecnologies-icons"></i>
+                                    </div>
+                                    <div class="col-sm">
+                                        <i class="fab fa-java tecnologies-icons"></i>
                                     </div>
                                 </div>
                             </div>
